# code-challenge

./: README.md
app/: .env  .gitignore  docker-compose.yml  pyproject.toml
app/src/app/: constants.py  example_queries.py  import_csv.py  import_postgres.py  insert_into_mongo.py  save_locally.py
app/tests/: test_app.py
